kubernetes/apps/network/static-routes/app/kiki/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app kiki
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName

  ports:
    - name: https
      port: 8080

  externalName: 10.0.0.94
