kubernetes/apps/network/static-routes/app/kiki/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app kiki
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host kiki.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  name: console
  tls:
    - hosts:
        - *host
